 * Invmem module improvements
 * Support for Atrac1 audio codec
 * Support for SSE3 and SSE4 capabilities
 * Multiple improvements for subtitles styles .SRT and .SSA
 * Support for DxVA2 for H.264 decoding on GPU on Windows Vista and 7
 * Support for VAAPI for H.264 decoding on GPU on GNU/Linux
 * Audio/Video decoder using OpenMAX IL components
 * Support for Indeo5 video codec

Demuxers:
 * Support for ADPCM in .flv streams
 * EXPERIMENTAL support for .aob files from DVD-Audio (MLP and LPCM)
   (Full disc support is NOT present yet)
 * Support for TwinVQ (.vqf) and AMV (.amv) files
 * Various EGP improvements
 * Support for embedded subtitles in OpenDML and legacy .avi files

Playlist:
 * WPL playlist support
 * ZPL playlist support
 * Lua scripts for Mpora, Vimeo playback and Rockbox FM radios
 * New Play-And-Pause function to stop playback on latest video image
 * Podcast images are now displayed

Video Output:
 * Rewrite of the video output core and most video outputs
 * Added desktop mode to the Direct3D output module. It differs from DirectX
   desktop mode, because it hides the desktop icons, but reacts to mouse clicks.
 * New x11, glx and xv modules based on XCB
 * New deinterlacing modes based on yadif and yadif(x2)
 * New audio/video filter to show audio level on the video output
 * Enhanced AtmoLight filter with hardware support for
     Classic AtmoLight (http://www.vdr-wiki.de/wiki/index.php/Atmo-plugin)
     Quattro AtmoLight (use just 4 Classic AtmoLights as one)
     MoMoLight (http://www.ambilight4pc.com/momolight/momolight.html)
     Simple serial DMX controller (http://www.ulrichradig.de/ search for DMX)

Extensions:
 * new content extensions lua framework
 * IMDb extension

Audio filters:
 * Chorus/Flanger audio filter
 * 3F1R to stereo down-mix filter
 * Dolby mixer, parameterized equalizer, trivial mixer, scaletempo, bandlimited 
   resampler, linear resampler, ugly resampler, converter_fixed, DTS to SPDIF 