@@ -271,6 +271,9 @@ static const struct
 #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT( 52, 35, 0 )
     { VLC_CODEC_WMAP, CODEC_ID_WMAPRO, AUDIO_ES },
 #endif
+#if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT( 52, 54, 0 )
+    { VLC_CODEC_WMAS, CODEC_ID_WMAVOICE, AUDIO_ES },
+#endif
 
     { VLC_CODEC_DVAUDIO, CODEC_ID_DVAUDIO, AUDIO_ES },
 
